--- a/src/components/Frame/frame.css
+++ b/src/components/Frame/frame.css
@@ -1,12 +1,33 @@
 .header{
     display: flex;
     justify-content: space-between;
-    background: #1890ff;
-    padding: 0px 30px;
+    background:  #009688;
+    padding: 0px 30px 0 0;
     color: #fff;
+    height: 50px;
+    line-height: 50px;
 }
 .logoText{
-    font-size: 25px;
+    font-size: 16px;
+    width: 220px;
     color: #fff;
-    
+    line-height: 50px;
+    background: #007d71;
+    text-align: center;
+}
+.ant-layout-sider{
+    flex: 0 0 220px!important;
+    max-width: 220px!important;
+    min-width: 220px!important;
+    width: 220px!important;
+}
+.ant-layout-sider-children>.ant-menu{
+    background-color: #222d32!important;
+}
+.ant-menu-title-content{
+    color: #fff;
+}
+.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected{
+    background-color: #009688;
+    color: #fff;
 }
