--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -5,3 +5,8 @@
     left: 50%;
     transform: translate3d(-50%,-50%,0);
 }
+.loginBg{
+    width: 100%;
+    height: 100%;
+    background: url('../staic/img/loginBg.png');
+}
